// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in ProductCard component should increment counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Tests in ProductCard component should render component with the custom img 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
